<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/gesturepwd_root"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/bg"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/unlock_gesture_topbar"
        android:layout_width="fill_parent"
        android:visibility="invisible"
        android:layout_height="50dp" >

        <ImageView
            android:id="@+id/unlock_gesture_back"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:scaleType="centerInside"
            android:src="@drawable/ico_topback" />

        <TextView
            android:id="@+id/unlock_gesture_title"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_marginLeft="20dp"
            android:layout_toRightOf="@+id/unlock_gesture_back"
            android:gravity="center_vertical"
            android:text="@string/gesture_password"
            android:textColor="@color/white"
            android:textSize="20sp" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_marginTop="25dp"
        android:gravity="center_vertical"
        android:orientation="vertical" >

         <ImageView
            android:id="@+id/gesturepwd_unlock_face"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="0.0dip"
            android:src="@drawable/ico_login_logo"
            android:scaleType="centerInside"
            />
        
        
       <!--  <cn.com.zte.android.widget.lockpattern.view.RoundImageLayoutLock
            android:id="@+id/gesturepwd_unlock_face"
            android:layout_width="80.0dip"
            android:layout_height="80.0dip"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="0.0dip"
            android:padding="4.0dip" /> -->
        <!--
         <TextView 
        android:id="@+id/tv_title"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40.0dip"
        android:layout_marginRight="40.0dip"
        android:layout_marginTop="5.0dip"
        android:gravity="center_horizontal"
        android:text=""
        android:textColor="@color/gray"
        android:shadowColor="#b3ffffff"
        android:shadowRadius="1.0"
        android:textSize="16.0sp"/>
        -->

        <TextView
            android:id="@+id/gesturepwd_unlock_text"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40.0dip"
            android:layout_marginRight="40.0dip"
            android:layout_marginTop="22dip"
            android:gravity="center_horizontal"
            android:shadowColor="#b3ffffff"
            android:shadowRadius="1.0"
            android:text="@string/please_lockscreen_access_pattern"
            android:textColor="@color/white"
            android:textSize="16.0sp" />

        <TextView
            android:id="@+id/gesturepwd_unlock_failtip"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40.0dip"
            android:layout_marginRight="40.0dip"
            android:layout_marginTop="10dip"
            android:gravity="center_horizontal"
            android:shadowColor="#b3ffffff"
            android:shadowRadius="1.0"
            android:text="@string/need_relogin"
            android:textColor="@color/gray"
            android:textSize="12.0sp"
            android:visibility="invisible" />

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent" >

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_above="@+id/gesturepwd_unlock_botlayout"
                android:layout_marginBottom="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp" >

                <cn.com.zte.android.widget.lockpattern.view.LockPatternView
                    android:layout_centerHorizontal="true"
                    android:id="@+id/gesturepwd_unlock_lockview"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/gesturepwd_unlock_botlayout"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_gravity="bottom"
                android:layout_marginBottom="20dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp" >

                <TextView
                    android:id="@+id/gesturepwd_unlock_forget"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:padding="10dp"
                    android:shadowColor="#e0ffffff"
                    android:shadowDy="1.0"
                    android:shadowRadius="1.0"
                    android:text="@string/forght_gesture_password"
                    android:textColor="@drawable/color_homemenu_text"
                    android:textSize="14.0sp" />

                <TextView
                    android:id="@+id/gesturepwd_unlock_other"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:padding="10dp"
                    android:shadowColor="#e0ffffff"
                    android:shadowDy="1.0"
                    android:shadowRadius="1.0"
                    android:text="@string/other_gesture"
                    android:textColor="@drawable/color_homemenu_text"
                    android:textSize="14.0sp" />
            </RelativeLayout>
        </RelativeLayout>
    </LinearLayout>

</LinearLayout>