<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/bg"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/create_gesture_topbar"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:visibility="invisible" >

        <ImageView
            android:id="@+id/create_gesture_back"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:background="@drawable/topbar_btn_image"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:scaleType="centerInside"
            android:src="@drawable/ico_topback" />

        <TextView
            android:id="@+id/create_gesture_title"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_marginLeft="20dp"
            android:layout_toRightOf="@+id/create_gesture_back"
            android:gravity="center_vertical"
            android:text="@string/gesture_password"
            android:textColor="#ffffff"
            android:textSize="20sp" />
    </RelativeLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="8dp"
        android:text="@string/gesture_password_guide_creat_btn"
        android:textColor="@color/white"
        android:textSize="18sp" />

    <LinearLayout
        android:id="@+id/gesturepwd_setting_preview"
        android:layout_width="40.0dip"
        android:layout_height="40.0dip"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dip"
        android:background="@drawable/gesture_create_grid_bg"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="9.0dip" >

            <View
                android:id="@+id/gesturepwd_setting_preview_0"
                android:layout_width="9.0dip"
                android:layout_height="9.0dip"
                android:background="@drawable/trans" />

            <View
                android:id="@+id/gesturepwd_setting_preview_1"
                android:layout_width="9.0dip"
                android:layout_height="9.0dip"
                android:layout_marginLeft="6.5dip"
                android:background="@drawable/trans" />

            <View
                android:id="@+id/gesturepwd_setting_preview_2"
                android:layout_width="9.0dip"
                android:layout_height="9.0dip"
                android:layout_marginLeft="6.5dip"
                android:background="@drawable/trans" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="9.0dip"
            android:layout_marginTop="6.5dip" >

            <View
                android:id="@+id/gesturepwd_setting_preview_3"
                android:layout_width="9.0dip"
                android:layout_height="9.0dip"
                android:background="@drawable/trans" />

            <View
                android:id="@+id/gesturepwd_setting_preview_4"
                android:layout_width="9.0dip"
                android:layout_height="9.0dip"
                android:layout_marginLeft="6.5dip"
                android:background="@drawable/trans" />

            <View
                android:id="@+id/gesturepwd_setting_preview_5"
                android:layout_width="9.0dip"
                android:layout_height="9.0dip"
                android:layout_marginLeft="6.5dip"
                android:background="@drawable/trans" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="9.0dip"
            android:layout_marginTop="6.5dip" >

            <View
                android:id="@+id/gesturepwd_setting_preview_6"
                android:layout_width="9.0dip"
                android:layout_height="9.0dip"
                android:background="@drawable/trans" />

            <View
                android:id="@+id/gesturepwd_setting_preview_7"
                android:layout_width="9.0dip"
                android:layout_height="9.0dip"
                android:layout_marginLeft="6.5dip"
                android:background="@drawable/trans" />

            <View
                android:id="@+id/gesturepwd_setting_preview_8"
                android:layout_width="9.0dip"
                android:layout_height="9.0dip"
                android:layout_marginLeft="6.5dip"
                android:background="@drawable/trans" />
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40.0dip"
        android:layout_marginRight="40.0dip"
        android:layout_marginTop="10.0dip"
        android:gravity="center_horizontal"
        android:shadowColor="#b3ffffff"
        android:shadowRadius="1.0"
        android:text=""
        android:textColor="@color/gray"
        android:textSize="16.0sp"
        android:visibility="gone" />

    <TextView
        android:id="@+id/gesturepwd_create_text"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40.0dip"
        android:layout_marginRight="40.0dip"
        android:layout_marginTop="10dp"
        android:gravity="center_horizontal"
        android:shadowColor="#b3000000"
        android:shadowRadius="1.0"
        android:text="绘制手势密码"
        android:textColor="@color/white"
        android:textSize="16.0sp" />

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20.0dip" >

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_above="@+id/gesturepwd_create_bot_but" >

            <cn.com.zte.android.widget.lockpattern.view.LockPatternView
                android:id="@+id/gesturepwd_create_lockview"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_centerHorizontal="true" />
        </RelativeLayout>

        <Button
            android:id="@+id/gesturepwd_create_bot_but"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="10dp"
            android:background="@android:color/transparent"
            android:padding="10dp"
            android:text="@string/gesture_reset"
            android:textColor="@color/white"
            android:textSize="16sp" />
    </RelativeLayout>

</LinearLayout>